Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -198,11 +198,11 @@
     "    b='pickup_longitude'\n",
     "    c='trip_distance'\n",
     "    for trip in trips:\n",
-    "        newdict=\n",
+    "        newdict={a:trip.get(a), b:trip.get(b), c:trip.get(c)}\n",
     "        #for key,value in trip.items(): \n",
     "            #if key=='trip_distance' or key=='pickup_latitude' or key=='pickup_longitude':\n",
     "                #newdict[key]=value\n",
-    "        pt.append({a:trip.get(a), b:trip.get(b), c:trip.get(c)})\n",
+    "        pt.append(newdict)\n",
     "    return pt\n",
     "        "
    ]
