Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,6 +198,10 @@
     "    b='pickup_longitude'\n",
     "    c='trip_distance'\n",
     "    for trip in trips:\n",
+    "        newdict=\n",
+    "        #for key,value in trip.items(): \n",
+    "            #if key=='trip_distance' or key=='pickup_latitude' or key=='pickup_longitude':\n",
+    "                #newdict[key]=value\n",
     "        pt.append({a:trip.get(a), b:trip.get(b), c:trip.get(c)})\n",
     "    return pt\n",
     "        "
@@ -205,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +220,7 @@
        " 'trip_distance': '18.379999999999999'}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
