--- a/index.ipynb
+++ b/index.ipynb
@@ -494,7 +494,7 @@
    "outputs": [],
    "source": [
     "def to_marker(coords):\n",
-    "    marker = folium.CircleMarker(coords, 6)\n",
+    "    marker = folium.CircleMarker(locationcoords, radius=6)\n",
     "    return marker"
    ]
   },
