Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -495,7 +495,8 @@
    "source": [
     "def to_marker(coords):\n",
     "    marker = folium.CircleMarker(location=coords, radius=6)\n",
-    "    return marker"
+    "    return marker\n",
+    "pri"
    ]
   },
   {
