Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -489,22 +489,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<folium.vector_layers.CircleMarker object at 0x7f1f279ac6d8>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def to_marker(coords):\n",
     "    marker = folium.CircleMarker(location=coords, radius=6)\n",
     "    return marker\n",
-    "print(marker)"
+    "pri"
    ]
   },
   {
