Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +502,7 @@
    ],
    "source": [
     "def to_marker(coords):\n",
-    "    marker = folium.CircleMarker(coords, radius=6)\n",
+    "    marker = folium.CircleMarker(location=coords, radius=6)\n",
     "    return marker\n",
     "print(marker)"
    ]
