--- a/index.ipynb
+++ b/index.ipynb
@@ -509,16 +509,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<folium.vector_layers.CircleMarker object at 0x7f1f278f6128>\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "[40.7589, -73.9851]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +533,7 @@
    "source": [
     "import json\n",
     "times_square_marker = to_marker([40.7589, -73.9851])\n",
-    "times_square_marker\n",
+    "print(times_square_marker)\n",
     "times_square_marker and times_square_marker.location # [40.7589, -73.9851]\n",
     "#times_square_marker and json.loads(times_square_marker.options)['radius'] # 6"
    ]
