Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -527,7 +527,7 @@
    "source": [
     "import json\n",
     "times_square_marker = to_marker([40.7589, -73.9851])\n",
-    "times_square_marker.items()\n",
+    "type(times_square_marker)\n",
     "times_square_marker and times_square_marker.location # [40.7589, -73.9851]\n",
     "#times_square_marker and json.loads(times_square_marker.options)['radius'] # 6"
    ]
