--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -509,31 +509,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'folium.vector_layers.CircleMarker'>\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-49-297abc9ef8b2>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-49-297abc9ef8b2>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    )\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[40.7589, -73.9851]"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "import json\n",
     "times_square_marker = to_marker([40.7589, -73.9851])\n",
-    "print(type(times_square_marker))\n",
+    "print(type(times_square_marker)\n",
     "times_square_marker and times_square_marker.location # [40.7589, -73.9851]\n",
     "#times_square_marker and json.loads(times_square_marker.options)['radius'] # 6"
    ]
