Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -509,16 +509,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'folium.vector_layers.CircleMarker'>\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "[40.7589, -73.9851]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,6 +533,7 @@
    "source": [
     "import json\n",
     "times_square_marker = to_marker([40.7589, -73.9851])\n",
+    "print(type(times_square_marker))\n",
     "times_square_marker and times_square_marker.location # [40.7589, -73.9851]\n",
     "#times_square_marker and json.loads(times_square_marker.options)['radius'] # 6"
    ]
