Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +518,7 @@
        "[40.7589, -73.9851]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +526,8 @@
    "source": [
     "import json\n",
     "times_square_marker = to_marker([40.7589, -73.9851])\n",
-    "times_square_marker and times_square_marker.location # [40.7589, -73.9851]\n",
+    "#times_square_marker and \n",
+    "times_square_marker.location # [40.7589, -73.9851]\n",
     "#times_square_marker and json.loads(times_square_marker.options)['radius'] # 6"
    ]
   },
