--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -489,12 +489,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<folium.vector_layers.CircleMarker object at 0x7f1f279ac6d8>\n"
+     ]
+    }
+   ],
    "source": [
     "def to_marker(coords):\n",
-    "    return folium.CircleMarker(coords, radius=6)\n"
+    "    marker = folium.CircleMarker(coords, radius=6)\n",
+    "    marker.add_to(manhattan_map)\n",
+    "    return marker\n",
+    "print(marker)"
    ]
   },
   {
