Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -499,16 +499,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[40.7589, -73.9851]"
+       "<folium.vector_layers.CircleMarker at 0x7f1f27838a90>"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +517,7 @@
     "import json\n",
     "times_square_marker = to_marker([40.7589, -73.9851])\n",
     "times_square_marker\n",
-    "times_square_marker and times_square_marker.location # [40.7589, -73.9851]\n",
+    "#times_square_marker and times_square_marker.location # [40.7589, -73.9851]\n",
     "#times_square_marker and json.loads(times_square_marker.options)['radius'] # 6"
    ]
   },
