Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
        "6"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +516,8 @@
    "source": [
     "import json\n",
     "times_square_marker = to_marker([40.7589, -73.9851])\n",
-    "print(times_square_marker.location # [40.7589, -73.9851]\n",
+    "times_square_marker\n",
+    "#times_square_marker and times_square_marker.location # [40.7589, -73.9851]\n",
     "#times_square_marker and json.loads(times_square_marker.options)['radius'] # 6\n",
     "times_square_marker.options['radius'] # 6"
    ]
