--- a/index.ipynb
+++ b/index.ipynb
@@ -516,9 +516,9 @@
    "source": [
     "import json\n",
     "times_square_marker = to_marker([40.7589, -73.9851])\n",
-    "print(times_square_marker.location # [40.7589, -73.9851]\n",
+    "print(times_square_marker.location # [40.7589, -73.9851])\n",
     "#times_square_marker and json.loads(times_square_marker.options)['radius'] # 6\n",
-    "times_square_marker.options['radius'] # 6"
+    "print(times_square_marker.options['radius'] # 6"
    ]
   },
   {
