Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -499,22 +499,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-86-cda9bff5a7af>, line 5)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-86-cda9bff5a7af>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    print(times_square_marker.options['radius']) # 6\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[40.7589, -73.9851]\n",
+      "6\n"
      ]
     }
    ],
    "source": [
     "import json\n",
     "times_square_marker = to_marker([40.7589, -73.9851])\n",
-    "print(times_square_marker.location # [40.7589, -73.9851])\n",
+    "print(times_square_marker.location) # [40.7589, -73.9851])\n",
     "#times_square_marker and json.loads(times_square_marker.options)['radius'] # 6\n",
     "print(times_square_marker.options['radius']) # 6"
    ]
