Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -668,7 +668,7 @@
     "times_square_map = map_from([40.7589, -73.9851], 15)\n",
     "times_square_map and times_square_map.location # [40.7589, -73.9851]\n",
     "#times_square_map and times_square_map.zoom_start # 15\n",
-    "times_square_map.optionszoom_start # 15"
+    "times_square_map.options['zoom_start # 15"
    ]
   },
   {
