--- a/index.ipynb
+++ b/index.ipynb
@@ -669,8 +669,7 @@
    "source": [
     "times_square_map = map_from([40.7589, -73.9851], 15)\n",
     "times_square_map and times_square_map.location # [40.7589, -73.9851]\n",
-    "#times_square_map and times_square_map.zoom_start # 15\n",
-    "times_square_map"
+    "#times_square_map and times_square_map.zoom_start # 15"
    ]
   },
   {
