--- a/index.ipynb
+++ b/index.ipynb
@@ -718,7 +718,7 @@
    "outputs": [],
    "source": [
     "def add_markers(markers, map_obj):\n",
-    "    map_obj.addto()"
+    "    map_obj.addto(map_obj)"
    ]
   },
   {
