--- a/index.ipynb
+++ b/index.ipynb
@@ -718,6 +718,7 @@
    "outputs": [],
    "source": [
     "def add_markers(markers, map_obj):\n",
+    "    for\n",
     "    markers.addto(map_obj)\n",
     "    return map_obj"
    ]
