--- a/index.ipynb
+++ b/index.ipynb
@@ -718,8 +718,8 @@
    "outputs": [],
    "source": [
     "def add_markers(markers, map_obj):\n",
-    "    for\n",
-    "    markers.addto(map_obj)\n",
+    "    for marker in markers:\n",
+    "        markers.addto(map_obj)\n",
     "    return map_obj"
    ]
   },
