--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -713,14 +713,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
     "def add_markers(markers, map_obj):\n",
     "    for marker in markers:\n",
     "        marker.addto(map_obj)\n",
-    "    return map_obj"
+    "    return "
    ]
   },
   {
