--- a/index.ipynb
+++ b/index.ipynb
@@ -719,8 +719,8 @@
    "source": [
     "def add_markers(markers, map_obj):\n",
     "    for marker in markers:\n",
-    "        ti\n",
-    "        marker.addto(map_obj)\n",
+    "        t\n",
+    "        to_marker.addto(map_obj)\n",
     "    return map_obj"
    ]
   },
