--- a/index.ipynb
+++ b/index.ipynb
@@ -719,7 +719,7 @@
    "source": [
     "def add_markers(markers, map_obj):\n",
     "    for marker in markers:\n",
-    "        to_marker[marker].addto(map_obj)\n",
+    "        to_marker(mar).addto(map_obj)\n",
     "    return map_obj"
    ]
   },
