--- a/index.ipynb
+++ b/index.ipynb
@@ -719,7 +719,8 @@
    "source": [
     "def add_markers(markers, map_obj):\n",
     "    for marker in markers:\n",
-    "        to_marker(marker).addto(map_obj)\n",
+    "        n=to_marker(marker)\n",
+    "        .addto(map_obj)\n",
     "    return map_obj"
    ]
   },
