Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -713,14 +713,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
     "def add_markers(markers, map_obj):\n",
     "    for marker in markers:\n",
     "        n=to_marker(marker)\n",
-    "        .addto(map_obj)\n",
+    "        n.addto(map_obj)\n",
     "    return map_obj"
    ]
   },
