Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -719,8 +719,7 @@
    "source": [
     "def add_markers(markers, map_obj):\n",
     "    for marker in markers:\n",
-    "        n=to_marker(marker)\n",
-    "        n.addto(map_obj)\n",
+    "        marke.addto(map_obj)\n",
     "    return map_obj"
    ]
   },
