--- a/index.ipynb
+++ b/index.ipynb
@@ -719,7 +719,7 @@
    "source": [
     "def add_markers(markers, map_obj):\n",
     "    for marker in markers:\n",
-    "        folium.CircleMarker(m)\n",
+    "        folium.CircleMarker(marker,radius=6)\n",
     "        marker.addto(map_obj)\n",
     "    return map_obj"
    ]
