Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -713,14 +713,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
     "def add_markers(markers, map_obj):\n",
     "    for marker in markers:\n",
-    "        folium.CircleMarker(marker,radius=6).addto(map_obj)\n",
-    "        #marker.addto(map_obj)\n",
+    "        folium.CircleMarker(marker,radius=6).addto(map)\n",
+    "        marker.addto(map_obj)\n",
     "    return map_obj"
    ]
   },
