--- a/index.ipynb
+++ b/index.ipynb
@@ -728,7 +728,7 @@
    "source": [
     "def add_markers(markers, map_obj):\n",
     "    for marker in markers:\n",
-    "        print marker\n",
+    "        print marker)\n",
     "        #marker.addto(map_obj)\n",
     "    return map_obj"
    ]
