Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -719,7 +719,7 @@
    "source": [
     "def add_markers(markers, map_obj):\n",
     "    for marker in markers:\n",
-    "        print(marker)\n",
+    "        print(marker)f\n",
     "        #marker.addto(map_obj)\n",
     "    return map_obj"
    ]
