--- a/index.ipynb
+++ b/index.ipynb
@@ -719,9 +719,9 @@
    "source": [
     "def add_markers(markers, map_obj):\n",
     "    for marker in markers:\n",
-    "        print(marker)f\n",
+    "        print(marker)\n",
     "        #marker.addto(map_obj)\n",
-    "        marker.add_to(m)\n",
+    "        marker.add_to(map_obj)\n",
     "    return map_obj"
    ]
   },
