--- a/index.ipynb
+++ b/index.ipynb
@@ -793,14 +793,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 130,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40.64499\n"
+     ]
+    }
+   ],
    "source": [
     "first_trip = {'pickup_latitude': 40.64499, 'pickup_longitude': -73.78115, 'trip_distance': 18.38}\n",
     "second_trip = {'pickup_latitude': 40.766931, 'pickup_longitude': -73.982098, 'trip_distance': 1.3}\n",
     "distance_first_and_second = distance_location(first_trip, second_trip)\n",
-    "distance_first_and_second\n",
+    "print(distance_first_and_second)\n",
     "#distance_first_and_second and round(distance_first_and_second, 3) # 0.235"
    ]
   },
