Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -787,7 +787,7 @@
     "import math\n",
     "\n",
     "def distance_location(selected_trip, neighbor_trip):\n",
-    "    delta_x=selected_trip['pickup_latitude']-\n",
+    "    delta_x=selected_trip['pickup_latitude']-neightbor['pickup_latitude']\n",
     "    return x"
    ]
   },
