Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -788,7 +788,7 @@
     "\n",
     "def distance_location(selected_trip, neighbor_trip):\n",
     "    delta_x=selected_trip['pickup_latitude']-neighbor_trip['pickup_latitude']\n",
-    "    delta_y=selected_trip['pickup_latitude']-neighbor_trip['pickup_latitude']\n",
+    "    delta_y=selected_trip['pickup_longitude']-neighbor_trip['pickup_longitude']\n",
     "    return x"
    ]
   },
