Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -789,7 +789,7 @@
     "def distance_location(selected_trip, neighbor_trip):\n",
     "    delta_x=selected_trip['pickup_latitude']-neighbor_trip['pickup_latitude']\n",
     "    delta_y=selected_trip['pickup_longitude']-neighbor_trip['pickup_longitude']\n",
-    "    distance=sqrt()\n",
+    "    distance=sqrt(delta_x)\n",
     "    return x"
    ]
   },
