Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -830,7 +830,7 @@
    "outputs": [],
    "source": [
     "def distance_between_neighbors(selected_trip, neighbor_trip):\n",
-    "    pass"
+    "    distance_location(selected_trip, neighbor_trip)"
    ]
   },
   {
