Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -830,7 +830,8 @@
    "outputs": [],
    "source": [
     "def distance_between_neighbors(selected_trip, neighbor_trip):\n",
-    "    distance=distance_location(selected_trip, neighbor_trip)"
+    "    distance=distance_location(selected_trip, neighbor_trip)\n",
+    "    neig"
    ]
   },
   {
