Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -831,7 +831,7 @@
    "source": [
     "def distance_between_neighbors(selected_trip, neighbor_trip):\n",
     "    distance=distance_location(selected_trip, neighbor_trip)\n",
-    "    return neighbor_trip"
+    "    return neighbor_trip[v]"
    ]
   },
   {
