--- a/index.ipynb
+++ b/index.ipynb
@@ -831,6 +831,7 @@
    "source": [
     "def distance_between_neighbors(selected_trip, neighbor_trip):\n",
     "    distance=distance_location(selected_trip, neighbor_trip)\n",
+    "    neighbor_trip['distance_from_selected']=distance\n",
     "    return "
    ]
   },
