Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -895,7 +895,7 @@
     "def distance_all(selected_individual, neighbors):\n",
     "    for neighbor in neighbors:\n",
     "        distance_between_neighbors(selected_individual, neighbor)\n",
-    "    return"
+    "    return neight"
    ]
   },
   {
