Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -948,7 +948,7 @@
    "source": [
     "def nearest_neighbors(selected_trip, trips, number = 3):\n",
     "    for trip in trips:\n",
-    "        distance_all()"
+    "        distance_all(selected_trip,trip)"
    ]
   },
   {
