Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -947,8 +947,8 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(selected_trip, trips, number = 3):\n",
-    "\n",
-    "        distance_all(selected_trip,trips)\n",
+    "    for trip in trips:\n",
+    "        distance_all(selected_trip,trip)\n",
     "        print(trip)\n",
     "    return"
    ]
