Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -952,7 +952,7 @@
     "    return\n",
     "\n",
     "def nearest_neighbors(selected_trip, trips, number = 3):\n",
-    "    number = number or len(neighbors)\n",
+    "    number = number or len(trips)\n",
     "    neighbor_distances = distance_all(selected_individual, neighbors)\n",
     "    sorted_neighbors = sorted(neighbor_distances, key=lambda neighbor: neighbor['distance'])\n",
     "    return sorted_neighbors[:number]"
